<resources>
    <string name="menu">Menu</string>
    <string name="switchMode">Mode</string>
    <string name="Calendar">Calendar</string>
    <string name="app_name">Schedo</string>
    <string name="back">Back</string>
    <string name="tasks">Tasks</string>
    <string name="addNewTask">New Task</string>
    <string name="editTasks">Edit Tasks</string>
    <string name="setWorkingHours">Set Working Hours</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>

    <string name="account">Account</string>
    <string name="userName">Michael</string>
    <string name="email">example@mymail.sutd.edu.sg</string>
    <string name="changePw">Change Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="confirmDelete">Confirm Delete?</string>
    <string name="logOut">Log Out</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inputUserName">Username</string>
    <string name="inputPassword">Password</string>
    <string name="next">Next</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="workingHours">Set Working Hours</string>
    <string name="checkList">CheckList</string>
    <string name="timeTable">TimeTable</string>

    <string name="Monday">M\nO\nN</string>
    <string name="Tuesday">T\nU\nE</string>
    <string name="Wednesday">W\nE\nD</string>
    <string name="Thursday">T\nH\nU</string>
    <string name="Friday">F\nR\nI</string>
    <string name="Saturday">S\nA\nT</string>
    <string name="Sunday">S\nU\nN</string>

    <string name="timePeriod">HH/MM to HH/MM</string>
    <string name="title">Title: </string>
    <string name="newTask">New Task</string>
    <string name="newTaskTitle">New Title: </string>
    <string name="estHours">Hours: </string>
    <string name="estMinutes">Minutes</string>
    <string name="dueDate">Due date: </string>
    <string name="estHoursToComplete">Estimated time to complete (Hr Min): </string>
    <string name="weeklyRecurring">Weekly Recurring: </string>
    <string name="weeklyRecSwitch">Weekly Recurring? </string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="inputTaskTitle">Please input the title</string>
    <string name="inputEstHours">Please input estimated completion time</string>
    <string name="inputDueDate">Please set the due date</string>
    <string name="yesOrNo">Yes/No</string>
    <string name="inputNewUserName">Username</string>
    <string name="inputNewUserEmail">Email Address</string>
    <string name="inputNewUserPassword">Password</string>
    <string name="inputNewUserConfirmPassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="createAccountTitle">Create Account</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="today">Today</string>
    <string name="to">To</string>
    <string name="alphanumeric">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
</resources>