<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/menuHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToMain"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:id="@+id/menuTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryalt" />

    </RelativeLayout>




    <Button
        android:id="@+id/addNewTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewTask" />

    <Button
        android:id="@+id/editTasksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editTasks" />

    <Button
        android:id="@+id/setWorkingHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setWorkingHours" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />


</LinearLayout>