<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/appicon"
        android:layout_width="130dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:gravity="bottom"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryalt"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:digits="@string/alphanumeric"
        android:maxLength="30"
        android:hint="@string/inputUserName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:maxLength="30"
        android:hint="@string/inputPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/logIn"
        />

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/signUp"
        />


</LinearLayout>