<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/newTaskHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"></Button>

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/Date"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/saveNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"></Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newTaskTitleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/newTaskTitle"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputNewTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputTaskTitle" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskHoursLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/estHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/estHours"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputEstHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputEstHours" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskDueDateLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/dueDate"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputNewTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/inputDueDate" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/newTaskWeeklyRecurringLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weeklyRecurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/weeklyRecurring"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputWeeklyRecurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/yesOrNo" />

    </LinearLayout>


</LinearLayout>