<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backToLogIn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:id="@+id/createAccountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/createAccountTitle"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryalt" />


    </FrameLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#A1979797"
        />

    <EditText
        android:id="@+id/inputNewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:ems="10"
        android:hint="@string/inputNewUserName"
        android:inputType="textPersonName"
        android:digits="@string/alphanumeric"
        android:maxLength="30"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputNewUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:ems="10"
        android:hint="@string/inputNewUserEmail"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputNewUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:ems="10"
        android:hint="@string/inputNewUserPassword"
        android:inputType="textPassword"
        android:digits="@string/alphanumeric"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputNewUserConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:ems="10"
        android:hint="@string/inputNewUserConfirmPassword"
        android:inputType="textPassword"
        android:digits="@string/alphanumeric"
        android:autofillHints="" />

    <Button
        android:id="@+id/submitNewUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/errorBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3sp"
        android:layout_marginRight="3sp"
        android:textSize="12sp"
        android:textColor="@color/red"/>
</LinearLayout>