<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu">
        </Button>

        <TextView
            android:id="@+id/tasksTitle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tasks"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryalt" />

        <Button
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Calendar"
            tools:onClick="onClick" />

        <!--        <Button-->
<!--            android:id="@+id/checkList"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:text="@string/checkList">-->
<!--        </Button>-->

    </FrameLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#A1979797"
        />

    <LinearLayout
        android:id = "@+id/datedisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id= "@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="8sp"
            android:text = "@string/today"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id = "@+id/timeTableTaskDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    </LinearLayout>

    </ScrollView>
</LinearLayout>